--- a/demo1/package.json
+++ b/demo1/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^1.7.2",
-    "gulp": "^3.8.10"
+    "gulp": "^3.8.10",
+    "gulp-gh-pages": "^0.5.1",
+    "gulp-load-plugins": "^0.10.0"
   }
 }
